mobile navbar was struggling with alignment. Fixed.

--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -533,6 +533,7 @@ html {
     justify-content: center;
     align-items: center;
     width: 100vw;
+    height: 100px;
 
   }
   .nav-wrapper > .left-side {
